--- a/package/crossplane.yaml
+++ b/package/crossplane.yaml
@@ -3,7 +3,7 @@ kind: Provider
 metadata:
   name: provider-nsxt
   annotations:
-    meta.crossplane.io/maintainer: Crossplane Maintainers <support@ankasoft.co>
+    meta.crossplane.io/maintainer: Crossplane Maintainers <support@alphabravo.io>
     meta.crossplane.io/source: github.com/AlphaBravoCompany/provider-nsxt
     meta.crossplane.io/license: Apache-2.0
     meta.crossplane.io/description: |
